--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   global_configs: ^1.1.2
   file_picker: ^5.2.5
   file_downloader: ^0.0.1
-
+  buttons_tabbar: ^1.3.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
