--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  ionicons: ^0.2.2
   ruki_nav_bar: ^0.0.11-dev
   smooth_scroll_web: ^0.0.4
   provider: ^6.0.5
